test/scripted/compilation/errors/try_no_error_field.bnj
# test:error 8:7 "optional types don't have an error field"

func main() {
    var optional: ?i32 = 100;
    
    try value in optional {
        print("value");
    } except error: i32 {
        print("error");
    }
}